# Semaphore-in-Circular-Buffer

./: .gitignore  README.md  run.sh
Arduino/: arduino.ino
Arduino/arduino/: arduino.ino
Consumer/: CMakeLists.txt  run.sh
Consumer/src/: main.c
Consumer/src/data/: data.c  datatypes.c  datatypes.h
Consumer/src/memory/: memory.c  memory.h
Consumer/src/system/: system.c
Finisher/: CMakeLists.txt  run.sh
Finisher/src/: main.c
Finisher/src/data/: comm.c  comm.h  data.c  data.h  datatypes.h
Finisher/src/memory/: memory.c  memory.h
Finisher/src/system/: system.c
Initiator/: CMakeLists.txt  run.sh
Initiator/src/: main.c
Initiator/src/data/: data.c  data.h  datatypes.c  datatypes.h
Initiator/src/memory/: memory.c  memory.h
Initiator/src/system/: system.c
Productor/: CMakeLists.txt  run.sh
Productor/src/: main.c
Productor/src/data/: data.c  data.h  datatypes.c  datatypes.h
Productor/src/memory/: memory.c  memory.h
Productor/src/system/: system.c  system.h
